# xbet_parser

./: .gitignore  Dockerfile  README.md  base.py  beta_baza.py  config.py  docker-compose-dev.yml  docker-compose.yml  get_db.py  main.py  older.json  pyproject.toml  saved_url.yaml  test.json  utils.py  xliteparser_url.yaml
excel_templates/: FHB_ Футбол Исход шаблон для редактирования.xlsx  FHB_Футбол_Исход_шаблон_для_редактирования_итоговый_вариант.xlsx  templates.xlsx  Лист Microsoft Excel.xlsx  ШАБЛОН Эксель Футбол 24.xlsx  ШАБЛОН Эксель Футбол Исход 2.xlsx  ШАБЛОН Эксель Футбол Исход.xlsx  ШАБЛОН Эксель Футбол Тотал.xlsx  ШАБЛОН Эксель Хоккей 24.xlsx  ШАБЛОН Эксель Хоккей Исход.xlsx  ШАБЛОН Эксель Хоккей Тотал.xlsx
parsers/: fhbstat.py  marathonbet.py  xlite.py
tests/: test_calc.py  test_date_parse.py  test_excel_templates.py  test_fhbstat.py  test_marathonbet_parser.py  test_write_excel.py  test_xbet_parser.py
tests/data/: FHB_ Футбол Исход.html  FHB_ Футбол Тотал ср.html  FHB_ Футбол Тотал_2.html  FHB_ Хоккей Исход.html  download_filters.json  test_1.html  ИТ1 (клубные) .json  П1_(хоккей_чемпионат_урезанные).json
tests/data/test_1_files/: 1.300  EventsPageHelperClass.js  VirtualScrollingHelperClass.js  blue.css  button.css  components.js  entry.js  events.css  gtm.js  hoc.css  lhn-jssdk-current.min.js  pages.css  palette.css  panbet.js  panweb-components.css  plugins.js  remoteEntry.js  theme.css  vendors.css  vendors.js
